# RustDemo

./: README.md
axum_web_demo/: Cargo.toml  README.md
axum_web_demo/src/: main.rs
calculator_cli/src/: main.rs
jsonfmt/: 1.json  Cargo.toml
jsonfmt/src/: command_utils.rs  json_utils.rs  lib.rs  main.rs
jsonfmt/static/: test.json
my-redis/: Cargo.toml
my-redis/examples/: hello-redis.rs
my-redis/src/: connection.rs
web-crawlers/: .env  .gitignore  Cargo.toml  Config.toml
web-crawlers/src/: config.rs  json_utils.rs  lib.rs  main.rs
