[package]
name = "jsonfmt"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.47", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0.225", features = ["derive"] }  # 用于JSON解析和格式化
anyhow = "1.0.100"

# Cargo.toml
[profile.release]
lto = true           # 全局优化
strip = true         # 移除调试符号
panic = 'abort'      # 减小 panic 开销
codegen-units = 1    # 更好优化
