[package]
name = "web-crawlers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
config = "0.15.17"
reqwest = "0.12.23"
#scraper = "0.24.0"
#dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
#toml = "=0.9.6"
